--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.3.0",
+		"@tanstack/react-query": "^5.61.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
+		"react-router-dom": "^7.0.0",
 		"redux": "^5.0.1",
 		"sass": "^1.81.0",
-		"styled-components": "^6.1.13"
+		"styled-components": "^6.1.13",
+		"styled-reset": "^4.5.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
+		"@types/node": "^22.9.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@typescript-eslint/eslint-plugin": "^8.15.0",
