--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
 		]
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^2.3.0",
 		"@tanstack/react-query": "^5.61.0",
 		"dotenv": "^16.4.5",
 		"firebase": "^11.0.2",
 		"react": "^18.3.1",
+		"react-calendar": "^5.1.0",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^7.0.0",
 		"redux": "^5.0.1",
+		"redux-thunk": "^3.1.0",
 		"sass": "^1.81.0",
 		"styled-components": "^6.1.13",
-		"styled-reset": "^4.5.2"
+		"styled-reset": "^4.5.2",
+		"uuid": "^11.0.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
